--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=db;Database=cinesystem;User=sa;Password=S3cur3P@ssW0rd!;"
+  } 
+
+
 }
