feat: signup incomplete

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=db;Database=cinesystem;User=sa;Password=S3cur3P@ssW0rd!;"
+    "Default": "Server=localhost;Database=cinesystem;User Id=SA;Password=S3cur3P@ssW0rd;TrustServerCertificate=true"
   } 
 
 
