--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   db:
     image: mcr.microsoft.com/mssql/server
     environment:
-      SA_PASSWORD: "fakePassw0rd"
+      SA_PASSWORD: "S3cur3P@ssW0rd"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
