feat: Add JWT config

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,7 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Server=localhost;Database=cinesystem;User Id=SA;Password=S3cur3P@ssW0rd;TrustServerCertificate=true"
-  } 
+  },
+  "Jwt": {
+    "Key": "DeixeIssoSeguroPeloAmorDeDeus"
+  }
 
 
 }
