--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=cinesystem;User Id=SA;Password=S3cur3P@ssW0rd;TrustServerCertificate=true"
+  },
+  "Jwt": {
+    "Key": "DeixeIssoSeguroPeloAmorDeDeus"
   }
 }
